landing non-resp nearly done

--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -6,3 +6,8 @@
   margin-top: 0;           /* Ensure no margin at the top */
 }
 
+.acknowledgement {
+  position: bottom;
+  justify-content: center; /* Center horizontally */
+  align-items: center;     /* Center vertically */
+}
