--- a/client/src/styles/landing.css
+++ b/client/src/styles/landing.css
@@ -6,8 +6,7 @@
     display: flex;
     justify-content: center; /* Center horizontally */
     align-items: center;     /* Center vertically */
-    height: 20vh;          
-    margin-top: 80px;           
+    margin-top: 100px;           
 }
 
 .body {
@@ -17,15 +16,15 @@
 .catchphrase {
     margin-top: 10px; /* Space between logo and catchphrase */
     text-align: center;
-    font-size: 40px;      
+    font-size:  3vw;;      
     font-weight: 800;
 }
 
 .subtitles {
-    margin-top: 50px; /* Space between logo and catchphrase */
+    margin-top: 5%; /* Space between logo and catchphrase */
     margin-bottom: 50px; /* Space between logo and catchphrase */
     text-align: center;
-    font-size: 40px;      
+    font-size: 2.7vw;      
     font-weight: 800;
 }
 
@@ -40,6 +39,7 @@
 }
 
 .img1-container {
+    position: relative; 
     width: 65%;
     height: auto;
     margin-top: 40px;
@@ -59,21 +59,24 @@
 
 .overlay-text {
     position: absolute; /* Position the text over the image */
-    top: 50%; /* Center vertically */
+    width: 80%;
+    height: 50%; /* Make the image fill the container */
     left: 50%; /* Center horizontally */
-    transform: translate(-50%, -10%); /* Adjust the exact center */
     color: white; /* White text */
-    font-size: 32px; /* Adjust as needed */
+    font-size: 1.8vw; /* Adjust as needed */
     font-weight: 700;
-    text-align: center; /* Ensure text is centered */
-    /* Additional styling as needed */
+    text-align: center; 
+    top: 50%; /* Adjust this value as needed */
+    transform: translate(-50%, -60%); /* Center the element */
 }
 
 .button-container {
+    width: 40%;
+    height: 10%;
     position: absolute;
-    top: 67%; /* Adjust this value as needed to position below the text */
-    left: 50%;
-    transform: translateX(-50%);
+    left: 58.5%;
+    top: 68%; /* Position it at the bottom of the container, adjust as needed */
+    transform: translateY(-100%) translateX(-50%); /* Adjust vertical position */
     display: flex; /* To layout buttons horizontally */
     gap: 30px; /* Space between buttons */
 }
@@ -83,35 +86,14 @@
     color: black; /* Black text */
     border: none;
     border-radius: 15px; /* Rounded corners */
-    padding: 15px 30px; /* Adjust padding as needed */
+    padding: .9vw 1.5vw; /* Adjust padding as needed */
     cursor: pointer; /* Pointer cursor on hover */
-    font-size: 20px; /* Adjust font size as needed */
+    font-size: 1.1vw; /* Adjust font size as needed */
     font-weight: 800;
 }
   
 .button-style:hover {
     background-color: #f0f0f0; /* Slightly darker background on hover */
-}
-@media (max-width: 768px) {
-    .img1-container {
-        width: 90%; /* Increase width for smaller screens */
-        height: 20%; /* Adjust height to maintain aspect ratio */
-        margin-top: 20px;
-    }
-    .overlay-text {
-        font-size: 14px; /* Smaller font size for smaller screens */
-        transform: translate(-50%, -90%); /* Adjust positioning */
-    }
-
-    .button-container {
-        top: 53%; /* Adjust positioning for smaller screens */
-        gap: 10px; /* Smaller gap between buttons */
-    }
-
-    .button-style {
-        padding: 5px 10px; /* Smaller padding for smaller buttons */
-        font-size: 8px; /* Smaller font size */
-    }
 }
 
 .wrapper {
@@ -142,9 +124,9 @@
     display: flex;
     align-items: center;
     justify-content: space-around;
-    margin-left: 300px;
-    margin-right: 300px;
-    padding: 15px;
+    margin-left: 12%;
+    margin-right: 12%;
+    padding: 1vw;
     border-radius: 15px; /* Rounded edges for the outer container */
     background-color: white; /* White background for the outer container */
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Optional: Adds a subtle shadow */
@@ -158,24 +140,24 @@
 .input-description {
     margin-right: 10px;
     color: #333; /* Text color for the description */
-    font-size: 16px;
+    font-size: 1vw;
 }
   
 .fake-input {
-    padding: 10px 20px;
+    padding: .7vw 1.5vw;
     border-radius: 5px; /* Rounded edges for each fake input */
     background-color: #f0f0f0; /* Light grey background */
     color: #333; /* Text color */
-    font-size: 16px;
-    margin-right: 10px; /* Space between input and the next description */
+    font-size: 1vw;
+    margin-right: 1vw; /* Space between input and the next description */
 }
   
 .go-button {
-    padding: 10px 20px;
+    padding: .6vw 1.2vw;
     border-radius: 5px; /* Rounded button edges */
     background-color: black; /* Black button */
     color: white; /* White text */
-    font-size: 16px;
+    font-size: 1vw;
     cursor: pointer; /* Pointer cursor on hover */
 }
   
@@ -185,12 +167,12 @@
 
 .map-container {
     width: 65%;
-    margin-top: 40px;
+    margin-top: 4vw;
     margin-left: auto;
     margin-right: auto;
     overflow: hidden; /* Hide the part of the image that overflows */
     border-radius: 15px; /* Rounded corners */
-    margin-bottom: 60px;
+    margin-bottom: 6vw;
     display: flex;
     justify-content: center; /* Center horizontally */
     align-items: center;     /* Center vertically */
@@ -200,7 +182,7 @@
     display: grid;
     grid-template-columns: 1fr 1fr; /* Two columns of equal width */
     grid-template-rows: auto auto; /* Two rows, height set automatically based on content */
-    gap: 50px; /* Space between grid items */
+    gap: 1vw; /* Space between grid items */
     padding-left: 30%;
     padding-right: 30%;
     padding-bottom: 5%;
@@ -212,8 +194,9 @@
     flex-direction: column; /* Stack children vertically */
     justify-content: center; /* Align children vertically */
     align-items: center; /* Align children horizontally */
-    padding: 10px;
+    padding: 1vw;
     height: 100%; /* Take full height of the grid area */
+    font-size: 1vw;
 }
 
 .grid-item h3 {
@@ -227,6 +210,7 @@
     justify-content: center;
     align-items: center;
     height: 100%; 
+    width: 100%;
 }
   
 .photo-item img {
@@ -235,7 +219,6 @@
     object-fit: contain; 
     border-radius: 15px;
 }
-  
 
 .navbar {
     display: flex;
@@ -273,20 +256,49 @@
 }
 
 
+
 .img2-container {
+    position: relative; 
     width: 65%;
-    margin-top: 0px;
+    height: auto;
+    margin-top: 5%;
     margin-left: auto;
     margin-right: auto;
     overflow: hidden; /* Hide the part of the image that overflows */
     border-radius: 15px; /* Rounded corners */
     margin-bottom: 60px;
-    position: relative;
-    height: 100%;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-  }
+}
+
+.img2-container img {
+    width: 100%;
+    height: 100%; /* Make the image fill the container */
+    object-fit: cover; /* Maintain aspect ratio and cover the container */
+    display: block;
+}
+
+.overlay-text-2 {
+    position: absolute; /* Position the text over the image */
+    width: 80%;
+    height: 50%; /* Make the image fill the container */
+    left: 50%; /* Center horizontally */
+    color: white; /* White text */
+    font-size: 1.8vw; /* Adjust as needed */
+    font-weight: 700;
+    text-align: left; 
+    top: 50%; /* Adjust this value as needed */
+    transform: translate(-50%, -70%); /* Center the element */
+}
+
+.button-container-2 {
+    width: 40%;
+    height: 10%;
+    position: absolute;
+    left: 57%;
+    top: 68%; /* Position it at the bottom of the container, adjust as needed */
+    transform: translateY(-100%) translateX(-50%); /* Adjust vertical position */
+    display: flex; /* To layout buttons horizontally */
+    gap: 30px; /* Space between buttons */
+}
   
   
   /* The image itself */
@@ -307,28 +319,3 @@
 }
   
   /* Container for the overlay content */
-.overlay-text-2 {
-    position: absolute;
-    bottom: 15%;
-    width: 100%;
-    padding: 20px;
-    text-align: left;
-    color: white; /* White text */
-    font-size: 32px; /* Adjust as needed */
-    font-weight: 700;
-    padding-left: 5%;
-    padding-right: 5%
-}
-
-.overlay-text-2 h3 {
-    text-align: cenleftleftter;
-    padding: 0px;
-}
-
-.button-container-2 {
-    position: absolute;
-    display: flex; /* To layout buttons horizontally */
-    gap: 30px; /* Space between buttons */
-    justify-content: center; /* Center horizontally */
-    align-items: center;     /* Center vertically */
-}
