--- a/client/src/styles/landing.css
+++ b/client/src/styles/landing.css
@@ -60,7 +60,7 @@
 .overlay-text {
     position: absolute; /* Position the text over the image */
     width: 80%;
-    height: 50%; /* Make the image fill the container */
+    height: 55%; /* Make the image fill the container */
     left: 50%; /* Center horizontally */
     color: white; /* White text */
     font-size: 1.8vw; /* Adjust as needed */
@@ -86,7 +86,7 @@
     color: black; /* Black text */
     border: none;
     border-radius: 15px; /* Rounded corners */
-    padding: .9vw 1.5vw; /* Adjust padding as needed */
+    padding: .6vw 1.5vw; /* Adjust padding as needed */
     cursor: pointer; /* Pointer cursor on hover */
     font-size: 1.1vw; /* Adjust font size as needed */
     font-weight: 800;
@@ -202,7 +202,10 @@
 .grid-item h3 {
     align-self: flex-start; /* Align h3 to the left */
     text-align: left; /* Align the text within h3 to the left */
-    margin-bottom: 0; /* Remove any default bottom margin if necessary */
+    margin-bottom: 1vw;
+    font-weight: 800;
+    font-size: 1.5vw;
+
 }
   
 .photo-item {
@@ -279,14 +282,25 @@
 .overlay-text-2 {
     position: absolute; /* Position the text over the image */
     width: 80%;
-    height: 50%; /* Make the image fill the container */
+    height: 38%; /* Make the image fill the container */
     left: 50%; /* Center horizontally */
     color: white; /* White text */
-    font-size: 1.8vw; /* Adjust as needed */
+    font-size: 1.7vw; /* Adjust as needed */
     font-weight: 700;
     text-align: left; 
     top: 50%; /* Adjust this value as needed */
     transform: translate(-50%, -70%); /* Center the element */
+}
+
+.overlay-text-2 h3 {
+    margin-bottom: 1vw;
+    font-weight: 900;
+    font-size: 2vw;
+}
+
+.overlay-text-2 p {
+    margin-bottom: 1vw;
+    font-size: 1.6vw;
 }
 
 .button-container-2 {
@@ -297,7 +311,7 @@
     top: 68%; /* Position it at the bottom of the container, adjust as needed */
     transform: translateY(-100%) translateX(-50%); /* Adjust vertical position */
     display: flex; /* To layout buttons horizontally */
-    gap: 30px; /* Space between buttons */
+    margin-top: 2vw;
 }
   
   
